2006-07-21  Nurdin Premji  <npremji@redhat.com>

	* .cvsignore: Ignoring
	config.guess
	config.sub

2006-07-19  Sami Wagiaalla  <swagiaal@redhat.com>

	* frysk/bindir/ftrace.java: Now prints the pid of the proc
	and thread making the syscall.

2006-07-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* frysk/bindir/ftrace.xml: New file.
	* frysk/bindir/ftrace.java: Moved to here.

2006-07-12  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-ptrace.a.

2006-07-11  Rick Moseley <rmoseley@redhat.com>

	* Makefile.am: Remove generic libunwind.a lib.

2006-07-10  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-setjmp.a for now.

2006-06-30  Stepan Kasal  <kasal@ucw.cz>

	* configure.ac: Include common/acinclude.m4 before AM_INIT_AUTOMAKE.
	* Makefile.am (GEN_GCJ_LDADD): Add libunwind libs.

2006-06-16  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Specify static elfutil libraries,
	re-order and add libebl/libebl.a.

2006-06-13  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (EXTRA_DIST): Add several ChangeLog's.

2006-06-09  Nurdin Premji  <npremji@redhat.com>

	* .cvsignore: Ignoring:
	compile
	depcomp
	install-sh
	missing

2006-06-07  Adam Jocksch  <ajocksch@redhat.com>

	* Makefile.am (GEN_CLASSPATH): Added cdtparser jar from frysk-imports.
	(GEN_GCJ_LDADD): Ditto.

2006-06-06  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Changed linking against .a's to -Ldir -llib.
	Added libdwfl.


2006-05-24  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Add frysk-imports/elfutils/libdw/libdw.a.

2006-05-16  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Add frysk-imports/elfutils/libelf/libelf.a.
	Add -lopcodes for linking.

2006-05-15  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (MOSTLYCLEANFILES): Use += because the variable is
	defined in common/Makefile.common.

2006-05-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add frysk/pkglibexecdir/util.h.
