@@ -1,3 +1,8 @@
+2006-07-24  Sami Wagiaalla  <swagiaal@redhat.com>
+
+	* frysk/bindir/ftrace.java (updateAttached): Attached observer now
+	blocks the task while observers are being added.
+
 2006-07-21  Nurdin Premji  <npremji@redhat.com>
 
 	* .cvsignore: Ignoring
